<resources>
    <string name="app_name">Introtuce App</string>
    <string name="name">Name*</string>
    <string name="address">Address*</string>
    <string name="email">Email*</string>
    <string name="phone">Phone*</string>
    <string name="submit">Submit</string>
    <string name="reading">Reading</string>
    <string name="sports">Sports</string>
    <string name="select_image">Select Image</string>
    <string name="cooking">Cooking</string>
    <string name="hobbies">Hobbies :</string>
    <string name="profile_pic">profile pic</string>
    <string name="create_user_profile">Create User Profile</string>
</resources>